--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "elearning",
   "version": "0.1.0",
   "private": true,
+  "module": "type",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,24 +10,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@mui/material": "^5.16.14",
+    "@mui/x-date-pickers": "^7.24.0",
     "@types/node": "20.2.0",
-    "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@workos-inc/authkit-nextjs": "^1.1.0",
+    "@workos-inc/node": "^7.37.0",
     "autoprefixer": "10.4.14",
+    "buffer": "^6.0.3",
+    "cookie-parser": "^1.4.7",
+    "crypto-browserify": "^3.12.1",
+    "dayjs": "^1.11.13",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
-    "next": "13.4.2",
+    "mui": "^0.0.1",
+    "next": "^15.1.5",
+    "next-auth": "^4.24.11",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
+    "@types/react": "^19.0.7",
     "@types/react-slick": "^0.23.10"
   }
 }
