--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "dayjs": "^1.11.13",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
     "mui": "^0.0.1",
     "next": "^15.1.5",
     "next-auth": "^4.24.11",
